load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:index.bzl", "ts_proto_library")


SRCS = glob(["**/*.proto"])

proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "json_names",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["json_names"],
    deps = [":protos"],
    visibility = ["//test/json_names:__pkg__"]
)
