load("@rules_proto//proto:defs.bzl", "proto_library")
load("//private:defs.bzl", "ts_proto_library")

SRCS = glob(["**/*.proto"])

# gazelle:go_generate_proto false
proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "json_names",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["json_names"],
    visibility = ["//test/json_names:__pkg__"],
    deps = [":protos"],
)
