load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:index.bzl", "ts_proto_library")


SRCS = glob(["**/*.proto"])

proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "no_namespace",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["no_namespace"],
    deps = [":protos"],
    visibility = ["//test/no_namespace:__pkg__"]
)
