load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:index.bzl", "ts_proto_library")

SRCS = glob(["**/*.proto"])

# gazelle:go_generate_proto false
proto_library(
    name = "protos",
    srcs = SRCS,
)

ts_proto_library(
    name = "no_namespace",
    outs = [
        src.replace(".proto", ".ts")
        for src in SRCS
    ],
    features = ["no_namespace"],
    visibility = ["//test/no_namespace:__pkg__"],
    deps = [":protos"],
)
